# slides-goog

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
examples/: sample_inspect.json  sample_operations.json  sample_patch_plan.json  sample_theme.json  template_values.json
src/slides_agent/: __init__.py  main.py
src/slides_agent/commands/: __init__.py  auth.py  deck.py  element.py  export.py  image.py  notes.py  patch.py  schema.py  slide.py  template.py  text.py  theme.py
src/slides_agent/core/: __init__.py  api.py  auth.py  errors.py  models.py  output.py  parser.py
src/slides_agent/schemas/: __init__.py  deck.py  patch.py  slide.py  theme.py
tests/: conftest.py  test_deck.py  test_errors.py  test_notes.py  test_output.py  test_parser.py  test_patch.py  test_schema.py  test_slide.py  test_template.py  test_text.py
